volexc/tests/ui/parse_unclosed_map.out
Error: found end of input but expected "}"
   ╭─[parse_unclosed_map.vol:4:3]
   │
   │ 
   │ 
   │ Note: Expected one of: '}'
───╯