volexc/tests/ui/parse_unclosed_map.vol
// Unclosed map type
struct Foo {
    bar: {string:u32;
}
